--- a/angular_tutorial/src/app/components/data-binding/data-binding.component.html
+++ b/angular_tutorial/src/app/components/data-binding/data-binding.component.html
@@ -19,7 +19,7 @@
       <div class="col-4">
         Property Binding
 
-        <div class="{{myClassName}}">Danger</div>
+        <div [class] ="myClassName">Danger</div>
       </div>
     </div>
   </div>
