--- a/angular_tutorial/src/app/components/directive/structural-dir/structural-dir.component.html
+++ b/angular_tutorial/src/app/components/directive/structural-dir/structural-dir.component.html
@@ -12,15 +12,15 @@
         <div *ngIf="isDiv2Visiable" class="bg-success p-3 text-center">
             <h4>Div-2 </h4> 
         </div>
-    </div> 
+    </div>
     <div class="col-3">
-        <div class="bg-secondary p-3 text-center">
+        <div *ngIf="num1 == num2" class="bg-secondary p-3 text-center">
             <h4>Div-3 </h4> 
         </div>
     </div>
     <div class="col-3">
-        <div class="bg-primary p-3 text-center">
-            <h4>Div-4 </h4> 
+        <div *ngIf="isActive" class="bg-primary p-3 text-center">
+            <h4>Div-4 </h4>
         </div>
     </div>
 </div>
@@ -34,13 +34,13 @@
     </div> 
     <div class="col-3">
           <div style="display: flex;align-items:center">
-            <input type="text" placeholder="Num-1" class="width-50">
-            <input type="text" placeholder="Num-2" class="width-50">
+            <input type="text" [(ngModel)]="num1" placeholder="Num-1" class="width-50">
+            <input type="text" [(ngModel)]="num2" placeholder="Num-2" class="width-50">
           </div>
     </div>
     <div class="col-3">
         <div style="display: flex;align-items:center">
-            <input type="checkbox" class="width-50">
+            <input [(ngModel)]="isActive" type="checkbox" class="width-50">
             <select>
                 <option value="">Select State</option>
                 <option value="India">India</option>
