--- a/angular_tutorial/src/app/components/directive/attribute-directive/attribute-directive.component.html
+++ b/angular_tutorial/src/app/components/directive/attribute-directive/attribute-directive.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="col-3">
-    <div class="p-3 text-center" [ngClass]="isActive ? 'bg-primary' : '' ">
+    <div class="p-3 text-center" [ngClass]="isActive ? 'bg-primary' : ''">
       <h4>Div-4</h4>
     </div>
   </div>
@@ -72,24 +72,44 @@
 </div>
 
 <div class="row pt-4">
-  <div class="col-5">
+  <div class="col-5 mx-5">
     <table class="table table-bordered">
       <thead>
         <tr>
           <th>Name</th>
           <th>Gender</th>
-          <th>City</th>
           <th>Status</th>
+          <th>City</th>
+          <th>Total Mark</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let student of studentList">
-          <td>{{student.name}}</td>
-          <td>{{student.gender}}</td>
-          <td>{{student.city}}</td>
-          <td>{{student.isActive}}</td>
+          <td>{{ student.name }}</td>
+          <td>{{ student.city }}</td>
+          <td
+            [ngStyle]="{
+              'background-color': student.isActive ? 'yellow' : 'red'
+            }"
+          >
+            <span>{{ student.isActive ? "Active" : "De-Active" }}</span>
+          </td>
+          <td>{{ student.gender }}</td>
+          <td>
+            <div class="progress">
+              <div
+                class="progress-bar"
+                [ngStyle]="{ width: student.totalMarks + '%' }"
+              >
+                {{ student.totalMarks }}%
+              </div>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
+  </div>
+  <div class="col-5">
+    <div [ngStyle]="customerStyle"></div>
   </div>
 </div>
