--- a/angular_tutorial/src/app/app.component.html
+++ b/angular_tutorial/src/app/app.component.html
@@ -1,1 +1,42 @@
-<app-attribute-directive></app-attribute-directive>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="javasrcipt:void(0)">Logo</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#mynavbar"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link active" routerLink="add-emp">Add Employee</a>
+        </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link active" routerLink="data-binding">Data Binding</a>
+        </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link active" routerLink="emp-list">Employee List</a>
+        </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link active" routerLink="structural-dir">Structural Dir</a>
+        </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link active" routerLink="attribute-dir">Attribute Dir</a>
+        </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link active" routerLink="if-else"><span>&#64;</span>If</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="text" placeholder="Search" />
+        <button class="btn btn-primary" type="button">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
