--- a/angular_tutorial/src/app/app.component.html
+++ b/angular_tutorial/src/app/app.component.html
@@ -32,6 +32,9 @@
         <li class="nav-item" style="margin-top: -12px">
           <a class="nav-link active" routerLink="for"><span>&#64;</span>for,switch</a>
         </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link active" routerLink="pipe">Pipe</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search" />
