--- a/angular_tutorial/src/app/app.component.html
+++ b/angular_tutorial/src/app/app.component.html
@@ -11,29 +11,32 @@
     </button>
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="add-emp">Add Employee</a>
         </li>
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="data-binding">Data Binding</a>
         </li>
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="emp-list">Employee List</a>
         </li>
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="structural-dir">Structural Dir</a>
         </li>
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="attribute-dir">Attribute Dir</a>
         </li>
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="if-else"><span>&#64;</span>If</a>
         </li>
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="for"><span>&#64;</span>for,switch</a>
         </li>
-        <li class="nav-item" style="margin-top: -12px">
+        <li class="nav-item">
           <a class="nav-link active" routerLink="pipe">Pipe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="template-form">Form</a>
         </li>
       </ul>
       <form class="d-flex">
