--- a/angular_tutorial/src/app/app.component.html
+++ b/angular_tutorial/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- <app-navbar></app-navbar> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="javasrcipt:void(0)">Logo</a>
