--- a/angular_tutorial/src/app/app.component.html
+++ b/angular_tutorial/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!-- <app-navbar></app-navbar> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="javasrcipt:void(0)">Logo</a>
@@ -37,7 +36,10 @@
           <a class="nav-link active" routerLink="pipe">Pipe</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLink="template-form">Form</a>
+          <a class="nav-link active" routerLink="template-form">Template Form</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="reactive-form">Reactive Form</a>
         </li>
       </ul>
       <form class="d-flex">
