--- a/angular_tutorial/src/app/components/forms/reactive/reactive.component.html
+++ b/angular_tutorial/src/app/components/forms/reactive/reactive.component.html
@@ -23,13 +23,14 @@
             <div class="col-md-4">
                 <label class="form-label">Username</label>
                 <div class="input-group">
-                    <span class="input-group-text"><span>&#64;</span> </span>
-                    <input formControlName="userName" type="text" class="form-control">
+                  <span class="input-group-text"><span>&#64;</span> </span>
+                  <input
+                    type="text"
+                    name="userName"
+                    class="form-control"
+                  />
                 </div>
-                @if (studentForm.controls['userName'].touched && studentForm.controls['userName'].errors?.['email']) {
-                    <span class="text-danger"> Email Not Proper</span>
-                }
-            </div>
+              </div>
             <div class="col-md-6">
                 <label class="form-label">City</label>
                 <input type="text" formControlName="city" class="form-control">
