--- a/angular_tutorial/src/app/app.component.html
+++ b/angular_tutorial/src/app/app.component.html
@@ -41,6 +41,9 @@
         <li class="nav-item">
           <a class="nav-link active" routerLink="reactive-form">Reactive Form</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="get-api">Get Api</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search" />
